--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 
 
-spring.datasource.url=jdbc:mysql://bdui2uoqcd7inzh98piz-mysql.services.clever-cloud.com:3306/bdui2uoqcd7inzh98piz?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=uokrullmnjkbsfbp
-spring.datasource.password=EKh6VKPEewN8z3aTqnS9
+spring.datasource.url=jdbc:mysql://localhost:3306/agriwatchdb?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=P4ssword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración adicional de JPA e Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
+
+# Nivel de log para Hibernate SQL
 logging.level.org.hibernate.SQL=debug
-
-
